# pystackw6

./: .coverage  README.md  coverage.xml  manage.py  pyproject.toml
.github/workflows/: django.yml
media/: 6bgadPB3.csv  f6Z9-w7x.csv
srcprg/: .coverage  settings.py  urls.py
srcprg/cliente/: apps.py  urls.py  views.py
srcprg/docs/Aula-2/: aula2_psw6.md
srcprg/docs/Aulas/: aula1_psw6.md  uala3-psw6.md
srcprg/eventos/: admin.py  apps.py  models.py  urls.py  views.py
srcprg/eventos/migrations/: 0001_initial.py  0002_evento_participantes.py  0003_certificado.py
srcprg/templates/: base.html  base_evento.html  cadastro.html  certificados_evento.html  gerenciar_evento.html  inscrever_evento.html  meus_certificados.html  novo_evento.html  participantes_evento.html
srcprg/templates/partials/usuarios/: cadastro.html
srcprg/templates/static/evento/css/: evento.css
srcprg/templates/static/usuarios/: login.html
srcprg/templates/static/usuarios/css/: usuarios.css
srcprg/tests/: test_home.py  test_initial.py
srcprg/usuarios/: apps.py  views.py
